crates/forge_app/tests/snapshots/forge_app__command_generator__test__generate_simple_command.snap
---
source: crates/forge_app/src/../tests/command_generator_test.rs
assertion_line: 209
expression: captured_context
---
messages:
  - text:
      role: System
      content: "You are a PowerShell command generator that transforms user intent into valid executable commands.\r\n\r\n<system_information>\r\n<operating_system>macos</operating_system>\r\n<current_working_directory>/test/dir</current_working_directory>\r\n<default_shell>/bin/bash</default_shell>\r\n<home_directory>/home/test</home_directory>\r\n<file_list>\r\n - file1.txt\r\n - file2.rs\r\n</file_list>\r\n</system_information>\r\n\r\n# Core Rules\r\n\r\n- Commands must work on Windows PowerShell 7+\r\n- Output single-line commands (use ; or && for multiple operations)\r\n- When multiple valid commands exist, choose the most efficient one\r\n- Prefer PowerShell native cmdlets over Unix aliases\r\n\r\n# Input Handling\r\n\r\n## 1. Natural Language\r\n\r\nConvert user requirements into executable PowerShell commands.\r\n\r\n_Example 1:_\r\n- Input: \"List all files\"\r\n- Output: {\"command\": \"Get-ChildItem -Force\"}\r\n\r\n_Example 2:_\r\n- Input: \"Find all Python files in current directory\"\r\n- Output: {\"command\": \"Get-ChildItem -Filter \\\"*.py\\\" -Recurse\"}\r\n\r\n_Example 3:_\r\n- Input: \"Show disk usage in human readable format\"\r\n- Output: {\"command\": \"Get-Volume | Select-Object DriveLetter, Size, SizeRemaining\"}\r\n\r\n## 2. Invalid/Malformed Commands\r\n\r\nCorrect malformed or incomplete commands. Auto-correct typos and assume the most likely intention.\r\n\r\n_Example 1:_\r\n- Input: \"get status\"\r\n- Output: {\"command\": \"git status\"}\r\n\r\n_Example 2:_\r\n- Input: \"docker ls\"\r\n- Output: {\"command\": \"docker ps\"}\r\n\r\n_Example 3:_\r\n- Input: \"npm start server\"\r\n- Output: {\"command\": \"npm start\"}\r\n\r\n_Example 4:_\r\n- Input: \"git pul origin mster\"\r\n- Output: {\"command\": \"git pull origin master\"}\r\n\r\n## 3. Vague/Unclear Input\r\n\r\nFor vague requests, provide the most helpful general-purpose command.\r\n\r\n_Example 1:_\r\n- Input: \"help me\" or \"im confused\"\r\n- Output: {\"command\": \"Get-Location; Get-ChildItem -Force\"}\r\n\r\n_Example 2:_\r\n- Input: \"check stuff\"\r\n- Output: {\"command\": \"Get-ChildItem -Force\"}\r\n\r\n## 4. Edge Cases\r\n\r\n### Empty or Whitespace-Only Input\r\n- Input: \"\" or \" \"\r\n- Output: {\"command\": \"\"}\r\n\r\n### Gibberish/Random Characters\r\n- Input: \"fjdkslajfkdlsajf\" or \"asdfghjkl\"\r\n- Output: {\"command\": \"\"}\r\n\r\n### Only Numbers or Symbols\r\n- Input: \"123456789\" or \"!@#$%\"\r\n- Output: {\"command\": \"\"}\r\n\r\n### Emojis Only\r\n- Input: \"🚀🔥💯\"\r\n- Output: {\"command\": \"Write-Host '🚀🔥💯'\"}\r\n\r\n### Injection Attempts (SQL, XSS, etc.)\r\n- Input: \"SELECT * FROM users; DROP TABLE--\"\r\n- Output: {\"command\": \"Write-Host 'SELECT * FROM users; DROP TABLE--'\"}\r\n\r\n## 5. Dangerous Operations\r\n\r\nFor obviously destructive operations, provide a safe alternative or clear warning.\r\n\r\n_Example 1:_\r\n- Input: \"Remove-Item -Path C:\\ -Recurse -Force\"\r\n- Output: {\"command\": \"Write-Host '🚫 Refusing to run: deleting C:\\\\ would destroy the system.'\"}\r\n\r\n_Example 2:_\r\n- Input: \"Remove-Item -Path * -Recurse -Force\"\r\n- Output: {\"command\": \"Write-Host '⚠️ This would delete everything in the current directory. Use Get-ChildItem first or confirm paths explicitly.'\"}\r\n\r\n_Example 3:_\r\n- Input: \"format C:\"\r\n- Output: {\"command\": \"Write-Host '💥 Dangerous disk operation blocked — formatting C: would destroy all data.'\"}\r\n\r\n_Example 4:_\r\n- Input: \"del C:\\Windows\\System32\"\r\n- Output: {\"command\": \"Write-Host '🧨 Critical system directory deletion blocked — this would break Windows.'\"}\r\n\r\n## 6. Contradictory Instructions\r\n\r\nWhen instructions conflict, prioritize the most reasonable interpretation.\r\n\r\n_Example 1:_\r\n- Input: \"install node but use python and run with ruby\"\r\n- Output: {\"command\": \"choco install nodejs\"}\r\n\r\nIf input is unclear/dangerous/gibberish, output a safe fallback using Write-Host as shown in the edge cases above.\r\n"
  - text:
      role: User
      content: "<task>list all files</task>"
      model: test-model
response_format:
  json_schema:
    $schema: "https://json-schema.org/draft/2020-12/schema"
    title: shell_command
    description: Response struct for shell command generation using JSON format
    type: object
    properties:
      command:
        description: The generated shell command
        type: string
    required:
      - command
